Fix hover issue in desktop and partners logo collapse issue in mobile

--- a/assets/scss/template/_template.scss
+++ b/assets/scss/template/_template.scss
@@ -803,7 +803,7 @@
   &:before {
     content: "";
     position: absolute;
-    height: 100%;
+    // height: 100%;
     width: 100%;
   }
   .feature-section {
