--- a/public/css/color1.css
+++ b/public/css/color1.css
@@ -14941,7 +14941,7 @@ input[type="date"] {
 .layout-home2:before {
   content: "";
   position: absolute;
-  height: 100%;
+  /* height: 100%; */
   width: 100%; }
 
 .layout-home2 .feature-section {
